--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@
 :root {
   --color-white--1: #ffff;
   --color-brown--1: #882828;
+  --color-brown--2: #780000;
+  --color-deep-pink: #F35959;
+  --color-light-green: #22D982;
   --color-dark--0: #000000;
   --color-light--grey: #5E5E5E;
   --color-deep--grey: #3F3F3F;
