--- a/src/component/Form.module.css
+++ b/src/component/Form.module.css
@@ -26,6 +26,7 @@
     border-radius: 3rem;
     background-color: var(--color-white--1);
     color: var(--color-deep--grey);
+    font-family: inherit;
     position: absolute;
     right: 2%;
     cursor: pointer;
