--- a/src/pages/Dashboard.module.css
+++ b/src/pages/Dashboard.module.css
@@ -5,6 +5,9 @@
     padding: 0 2rem;
     background:var(--color-dark--0);
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .transaction{
     display: flex;
