--- a/src/component/OverallTransactions.module.css
+++ b/src/component/OverallTransactions.module.css
@@ -1,7 +1,7 @@
 .container {
     background-image: linear-gradient(to bottom right, var(--color-brown--2), var(--color-dark--0));
     width: auto;
-    height: 317px;
+    height: auto;
     margin: 0 auto;
     position: relative;
     border-radius: 4rem;
