--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@
   --color-light-green: #22D982;
   --color-dark--0: #000000;
   --color-light--grey: #5E5E5E;
+  --color-dark--grey: #262626;
   --color-deep--grey: #3F3F3F;
   --color-pastel--blue: #B7E4FE;
   --color-vivid--shade: #196BE5;
