--- a/src/pages/Dashboard.module.css
+++ b/src/pages/Dashboard.module.css
@@ -3,18 +3,19 @@
     width: 100%;
     height: 100vh;
     padding: 0 2rem;
+    overflow: auto;
     background:var(--color-dark--0);
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.transaction{
+/* .transaction{
     display: flex;
     width: 100%;
     height: auto;
     justify-content: center;
-}
+} */
 .Ellipse{
     position: fixed;
     bottom: -6%;
