--- a/src/component/Setting.module.css
+++ b/src/component/Setting.module.css
@@ -11,6 +11,11 @@
     justify-content: center;
     width: 100%;
     height: 100%;
+    left: 0;
+    padding: 1rem;
+    position: fixed;
+    width: 100%;
+    z-index: 3;
     align-items: center;;
 }
 
